--- a/Tutorial_mlp.ipynb
+++ b/Tutorial_mlp.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -24,9 +24,9 @@
      "output_type": "stream",
      "text": [
       "Collecting mlprep-ls\n",
-      "  Downloading mlprep_ls-0.2.1-py3-none-any.whl (5.8 kB)\n",
+      "  Downloading mlprep_ls-0.3.0-py3-none-any.whl (5.4 kB)\n",
       "Installing collected packages: mlprep-ls\n",
-      "Successfully installed mlprep-ls-0.2.1\n"
+      "Successfully installed mlprep-ls-0.3.0\n"
      ]
     }
    ],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "4    11000.0    1057373   7/23/2009 0:00                     722.0    Medium"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,23 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, create an instance of the class."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ml_instance = mlp.MLPrepare()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then, define your continuous, categorical and date columns."
+    "Define your continuous, categorical and date columns."
    ]
   },
   {
@@ -438,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = ml_instance.df_to_type(df, date_type, continuous_type, categorical_type)"
+    "result = mlp.df_to_type(df, date_type, continuous_type, categorical_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +620,7 @@
        "4                 False            False              False  1248307200  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +664,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +780,7 @@
        "4          7  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,16 +816,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = ml_instance.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='random')"
+    "X_train, X_test, y_train, y_test = mlp.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='random')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +834,7 @@
        "((288888, 5), (123810, 5))"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,25 +852,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = ml_instance.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='on_split_id', split_var='MachineID')"
+    "X_train, X_test, y_train, y_test = mlp.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='on_split_id', split_var='MachineID')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((276656, 5), (136042, 5))"
+       "((276414, 5), (136284, 5))"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,16 +897,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = ml_instance.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='on_condition', cond=cond)"
+    "X_train, X_test, y_train, y_test = mlp.split_df(result, dep_var='SalePrice', test_size=0.3, split_mode='on_condition', cond=cond)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +915,7 @@
        "((288689, 5), (124009, 5))"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1011,7 @@
        "6    772701                   11540.0      High      2004          8"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,16 +1029,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_, X_test_, dict_list, dict_inv_list = ml_instance.cat_transform(X_train, X_test, cat_type = categorical_type)"
+    "X_train_, X_test_, dict_list, dict_inv_list = mlp.cat_transform(X_train, X_test, cat_type = categorical_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1123,7 @@
        "6      48637                   11540.0          1      2004          8"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1150,7 @@
        "{0: '#NaN', 1: 'High', 2: 'Low', 3: 'Medium'}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,17 +1175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "categorical_type = ['MachineID', 'UsageBand', 'saleYear', 'saleMonth']\n",
-    "X_train_2, X_test_2, y_train_2, y_test_2, scaler, scaler_y = ml_instance.cont_standardize(X_train_, X_test_, y_train, y_test, cat_type=categorical_type, transform_y=True, path='', standardizer='StandardScaler')"
+    "X_train_2, X_test_2, y_train_2, y_test_2, scaler, scaler_y = mlp.cont_standardize(X_train_, X_test_, y_train, y_test, cat_type=categorical_type, transform_y=True, path='', standardizer='StandardScaler')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1199,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1226,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1223,7 @@
        "       [-0.43756218]])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1319,7 @@
        "6      48637                  2.804732          1      2004          8"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
